--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid": "^7.0.2",
     "v-clipboard": "^2.2.2",
     "vue-mq": "^1.0.1",
+    "vue-select": "^3.9.4",
     "vue-webrtc": "^1.2.0"
   },
   "devDependencies": {
