--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt-start",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -19,7 +19,10 @@
     "v-clipboard": "^2.2.2",
     "vue-mq": "^1.0.1",
     "vue-select": "^3.9.4",
-    "vue-webrtc": "^1.2.0"
+    "vue-webrtc": "^1.2.0",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "regenerator-runtime": "^0.12.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
