--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nuxt": "^2.0.0",
-    "nuxt-start": "^2.12.1",
+    "nuxt": "^2.12.2",
+    "nuxt-start": "^2.12.2",
     "socket.io-client": "^2.3.0",
-    "uuid": "^7.0.2",
+    "uuid": "^7.0.3",
     "v-clipboard": "^2.2.2",
     "vue-mq": "^1.0.1",
-    "vue-select": "^3.9.4",
+    "vue-select": "^3.9.5",
     "vue-webrtc": "^1.2.0"
   },
   "devDependencies": {
@@ -27,8 +27,8 @@
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-nuxt": "^0.5.2",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
   }
