--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "start-local": "NUXT_HOST=0.0.0.0 NUXT_PORT=3333 nuxt-start",
     "build": "nuxt build",
     "start": "nuxt-start",
     "generate": "nuxt generate",
